nohup.out
Traceback (most recent call last):
  File "password-evolution.py", line 3, in <module>
    import sqllite3 #database for username/passwords
ModuleNotFoundError: No module named 'sqllite3'
Traceback (most recent call last):
  File "password-evolution.py", line 3, in <module>
    import sqllite3 #database for username/passwords
ModuleNotFoundError: No module named 'sqllite3'
Traceback (most recent call last):
  File "password-evolution.py", line 3, in <module>
    import sqllite3 #database for username/passwords
ModuleNotFoundError: No module named 'sqllite3'
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [15/Jun/2023 03:44:46] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 03:45:15] "[37mGET / HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 03:45:16] "[37mGET / HTTP/1.1[0m" 200 -
  File "password-evolution.py", line 41
    query = "SELECT PASSWORD FROM USER_PLAIN WHERE USERNAME =
                                                            ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 41
    query = "SELECT PASSWORD FROM USER_PLAIN WHERE USERNAME =
                                                            ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 41
    query = "SELECT PASSWORD FROM USER_PLAIN WHERE USERNAME =
                                                            ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 41
    query = "SELECT PASSWORD FROM USER_PLAIN WHERE USERNAME =
                                                            ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 41
    query = "SELECT PASSWORD FROM USER_PLAIN WHERE USERNAME =
                                                            ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 41
    query = "SELECT PASSWORD FROM USER_PLAIN WHERE USERNAME =
                                                            ^
SyntaxError: EOL while scanning string literal
  File "password-evolution.py", line 41
    query = "SELECT PASSWORD FROM USER_PLAIN WHERE USERNAME =
                                                            ^
SyntaxError: EOL while scanning string literal
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [15/Jun/2023 04:00:10] "[37mPOST /signup/v1 HTTP/1.1[0m" 200 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [15/Jun/2023 04:15:49] "[37mPOST /signup/v1 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:16:28] "[37mPOST /signup/v1 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:17:03] "[37mPOST /login/v1 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:17:19] "[37mPOST /login/v1 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:17:34] "[31m[1mPOST /login/v1 HTTP/1.1[0m" 400 -
127.0.0.1 - - [15/Jun/2023 04:17:44] "[37mPOST /login/v1 HTTP/1.1[0m" 200 -
 * Serving Flask app "password-evolution" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5000/ (Press CTRL+C to quit)
127.0.0.1 - - [15/Jun/2023 04:37:10] "[37mPOST /signup/v1 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:37:20] "[37mPOST /login/v1 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:38:09] "[37mPOST /signup/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:39:31] "[37mPOST /signup/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:40:24] "[37mPOST /signup/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:40:31] "[37mPOST /login/v2 HTTP/1.1[0m" 200 -
127.0.0.1 - - [15/Jun/2023 04:41:57] "[37mPOST /login/v2 HTTP/1.1[0m" 200 -
